tests/externblob/unique.sy
A :: newblob { }
B :: newblob { }

make_a : fn -> A : external
make_b : fn -> B : external

start :: fn do
  x := make_a'
  x = make_b'
end

// error: $Mismatch
